src/objects/EMPLOYEE__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY()) - YEAR( Date_of_Birth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_CTC__c</fullName>
        <label>Annual CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Bhopal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surat</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employee__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Current Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>DEPARTMENT__c</referenceTo>
        <relationshipLabel>EMPLOYEES</relationshipLabel>
        <relationshipName>EMPLOYEES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BCA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Sc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Tech.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Last_Name__c &amp; &quot; &quot; &amp;First_Name__c</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_del__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=0157F000000l7lY&quot;, &quot;Image&quot; , 200, 300)</formula>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_On_Notice_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is On Notice Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Working_Day__c</fullName>
        <formula>IF(MONTH((Resignation_Date__c))+2&gt;12, DATE(Year((Resignation_Date__c))+1,MONTH((Resignation_Date__c))-10, DAY(Resignation_Date__c) ), DATE(Year((Resignation_Date__c)),MONTH((Resignation_Date__c))+2, DAY(Resignation_Date__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Working Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>EMPLOYEE__c</referenceTo>
        <relationshipLabel>EMPLOYEES</relationshipLabel>
        <relationshipName>EMPLOYEES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resignation_Date__c</fullName>
        <label>Resignation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>EMPLOYEES</relationshipLabel>
        <relationshipName>EMPLOYEES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Salary_Credited_Till_Date__c</fullName>
        <label>Salary Credited Till Date</label>
        <summarizedField>SALARY_DETAIL__c.Gross_Salary__c</summarizedField>
        <summaryForeignKey>SALARY_DETAIL__c.Credited_To__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(  Is_Active__c  ,  IF( Is_On_Notice_Period__c , IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;,10,30), IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;,10,30)) , IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;,10,30))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>EMPLOYEE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Employees</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Employees</label>
    </listViews>
    <listViews>
        <fullName>All_Employees_On_Notice_Period</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_On_Notice_Period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Image_del__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Employees On Notice Period</label>
        <language>en_US</language>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Employees</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_of_Joining__c</columns>
        <columns>Last_Working_Day__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>All Inactive Employees</label>
        <sharedTo>
            <role>HR_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMPLOYEES</pluralLabel>
    <recordTypes>
        <fullName>Non_Technical</fullName>
        <active>true</active>
        <label>Non-Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <label>Technical</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Date_Of_Birth_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>YEAR(TODAY())-YEAR( Date_of_Birth__c ) &lt;18</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Please provide a valid Date of birth. Employee cannot be less than 18 years of Age.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Of_Birth_Validation_2</fullName>
        <active>true</active>
        <errorConditionFormula>Age__c  &lt; 21  ||  Age__c  &gt; 30</errorConditionFormula>
        <errorMessage>Employee must be aged between 21 to 30.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Working_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Last_Working_Day__c  &lt;  Date_of_Joining__c</errorConditionFormula>
        <errorMessage>Last working date cannot be greater than joining date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resignation_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Is_On_Notice_Period__c  &amp;&amp;  ISBLANK( Resignation_Date__c )</errorConditionFormula>
        <errorDisplayField>Resignation_Date__c</errorDisplayField>
        <errorMessage>Please Enter The Resignation Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>SSN__c / 1000000000 &lt;1  ||  SSN__c /1000000000  &gt;= 10 ||  ISBLANK( SSN__c )</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>SSN must be 10 digit.</errorMessage>
    </validationRules>
</CustomObject>